--- a/AiGaf/Untitled.ipynb
+++ b/AiGaf/Untitled.ipynb
@@ -83,6 +83,41 @@
     "                print('All splited successfully ' + self.filename)"
    ]
   },
+   "source": [
+    "folder = '/home/aigaf/Desktop/audio-classification-master/data/001-Paper'\n",
+    "\n",
+    "for file in files:\n",
+    "    split_wav = SplitWavAudioMubin(folder, file)\n",
+    "    split_wav.multiple_split(min_per_split=1)\n"
+   ]
+ {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sounddevice as sd\n",
+    "from scipy.io.wavfile import write\n",
+    "\n",
+    "fs = 44100  # Sample rate\n",
+    "seconds = 1  # Duration of recording\n",
+    "\n",
+    "while(True)\n",
+    "    myrecording = sd.rec(int(seconds * fs), samplerate=fs, channels=2)\n",
+    "    sd.wait()  # Wait until recording is finished\n",
+    "    \n",
+    "    #write('output.wav', fs, myrecording) # конверт в wav и сохранение"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 61,
