--- a/AiGaf/Untitled.ipynb
+++ b/AiGaf/Untitled.ipynb
@@ -101,7 +101,42 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},{
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "import math\n",
+    "\n",
+    "class SplitWavAudioMubin():\n",
+    "    def __init__(self, folder, filename):\n",
+    "        self.folder = folder\n",
+    "        self.filename = filename\n",
+    "        self.filepath = folder + '/' + filename\n",
+    "        \n",
+    "        self.audio = AudioSegment.from_wav(self.filepath)\n",
+    "    \n",
+    "    def get_duration(self):\n",
+    "        return self.audio.duration_seconds\n",
+    "    \n",
+    "    def single_split(self, from_min, to_min, split_filename):\n",
+    "        t1 = from_min * 1000\n",
+    "        t2 = to_min * 1000\n",
+    "        split_audio = self.audio[t1:t2]\n",
+    "        split_audio.export('/home/aigaf/Desktop/audio-classification-master/data/001-Paper-1sec/' + split_filename, format=\"wav\")\n",
+    "        \n",
+    "    def multiple_split(self, min_per_split):\n",
+    "        total_mins = math.ceil(self.get_duration() / 1)\n",
+    "        for i in range(0, total_mins, min_per_split):\n",
+    "            split_fn = str(i) + '_' + self.filename\n",
+    "            self.single_split(i, i+min_per_split, split_fn)\n",
+    "            print(str(i) + ' Done')\n",
+    "            if i == total_mins - min_per_split:\n",
+    "                print('All splited successfully ' + self.filename)"
+   ]
+  },
    "outputs": [
     {
      "ename": "OSError",
