add test dataset .jpg

--- a/AiGaf/Untitled.ipynb
+++ b/AiGaf/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,34 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\site-packages\\librosa\\core\\spectrum.py:222: UserWarning: n_fft=2048 is too small for input signal of length=882\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\site-packages\\librosa\\core\\spectrum.py:222: UserWarning: n_fft=2048 is too small for input signal of length=793\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\site-packages\\librosa\\core\\spectrum.py:222: UserWarning: n_fft=2048 is too small for input signal of length=1102\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "28379"
+       "56940"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Data_dir=np.array(glob(r\"D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_noise\\*\"))\n",
+    "#r\"D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_cut\\*\"\n",
+    "#r\"D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_noise\\*\"\n",
+    "#r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_cut\\*\"\n",
+    "#r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_noise\\*\"\n",
+    "\n",
+    "Data_dir=np.array(glob(r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_noise\\*\"))\n",
     "#%load_ext memory_profiler\n",
     "#%memit \n",
     "\n",
@@ -135,7 +128,7 @@
     "for file in Data_dir[i:i+2000]:\n",
     "    #Define the filename as is, \"name\" refers to the JPG, and is split off into the number itself. \n",
     "    filename,name = file,file.split('\\\\')[-1].split('.')[0]\n",
-    "    path = r'D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_noise.jpg\\\\' + name + '.jpg'\n",
+    "    path = r'D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_noise.jpg\\\\' + name + '.jpg'\n",
     "    create_spectrogram(filename, path)\n",
     "gc.collect()"
    ]
