--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,8 @@
     "valik = test_datagen.flow_from_directory(\n",
     "        r'D:\\reposetory\\Save_Transport\\dataset\\test',\n",
     "        target_size=(150, 150),\n",
-    "        batch_size=20)\n"
+    "        batch_size=20\n",
+    "        )\n"
    ]
   },
   {
@@ -142,44 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:5 out of the last 13 calls to <function Model.make_test_function.<locals>.test_function at 0x000001770D70E430> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "3/3 [==============================] - 0s 54ms/step - loss: 0.2144 - accuracy: 1.0000\n",
-      "\n",
-      " loss, accuracy = [0.21437668800354004, 1.0] \n",
-      "\n",
-      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001770D80B3A0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "      y_Actual                 y_Predicted\n",
-      "0   (1.0, 0.0)    (0.55965096, 0.40909812)\n",
-      "1   (1.0, 0.0)     (0.6728145, 0.27684718)\n",
-      "2   (1.0, 0.0)      (0.6597644, 0.2831859)\n",
-      "3   (1.0, 0.0)     (0.5751781, 0.39527416)\n",
-      "4   (0.0, 1.0)   (0.025350213, 0.97447234)\n",
-      "5   (0.0, 1.0)  (0.0013165176, 0.99871767)\n",
-      "6   (0.0, 1.0)    (0.021077842, 0.9793423)\n",
-      "7   (1.0, 0.0)    (0.58968014, 0.37217873)\n",
-      "8   (1.0, 0.0)      (0.6320741, 0.3225786)\n",
-      "9   (1.0, 0.0)     (0.7036094, 0.23707208)\n",
-      "10  (1.0, 0.0)     (0.6628956, 0.28185385)\n",
-      "11  (1.0, 0.0)     (0.57092774, 0.3967358)\n",
-      "12  (1.0, 0.0)      (0.6399077, 0.3101769)\n",
-      "13  (0.0, 1.0)    (0.017175227, 0.9825889)\n",
-      "14  (0.0, 1.0)    (0.017175227, 0.9825889)\n",
-      "15  (1.0, 0.0)     (0.64389443, 0.3025397)\n",
-      "16  (0.0, 1.0)    (0.00871408, 0.99098253)\n",
-      "17  (0.0, 1.0)   (9.768778e-05, 0.9998743)\n",
-      "18  (0.0, 1.0)    (0.015492231, 0.9853165)\n",
-      "19  (0.0, 1.0)   (0.0023209155, 0.9973476)\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ignore' from 'warnings' (C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\warnings.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-0e8cbf7fbefb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwarnings\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mignore\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mignore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ignore' from 'warnings' (C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\warnings.py)"
      ]
     }
    ],
    "source": [
+    "from warnings import ignore\n",
+    "warnings.ignore()\n",
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -197,6 +178,12 @@
     "\n",
     "\n",
     "final_res = model.predict(valik[1][0])\n",
+    "\n",
+    "\n",
+    "print(final_res)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "data = {'y_Actual':    [ tuple(i) for i in valik[1][1]],\n",
     "        'y_Predicted': [ tuple(i) for i in final_res]\n",
