--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -143,24 +143,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ignore' from 'warnings' (C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\warnings.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-0e8cbf7fbefb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwarnings\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mignore\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mignore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ignore' from 'warnings' (C:\\Users\\Alexe\\anaconda3\\envs\\audioClsfy\\lib\\warnings.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 13 calls to <function Model.make_test_function.<locals>.test_function at 0x000001770C40A8B0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "3/3 [==============================] - 0s 62ms/step - loss: 0.2144 - accuracy: 1.0000\n",
+      "\n",
+      " loss, accuracy = [0.21437667310237885, 1.0] \n",
+      "\n",
+      "WARNING:tensorflow:8 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001770D90E700> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "[[6.5738583e-01 2.9199129e-01]\n",
+      " [6.5448993e-01 2.9064262e-01]\n",
+      " [2.1077842e-02 9.7934228e-01]\n",
+      " [6.5976441e-01 2.8318590e-01]\n",
+      " [6.6138643e-01 2.8758132e-01]\n",
+      " [1.7175227e-02 9.8258889e-01]\n",
+      " [6.2556851e-01 3.3210438e-01]\n",
+      " [5.7092774e-01 3.9673579e-01]\n",
+      " [6.5406817e-01 2.9330409e-01]\n",
+      " [5.8606267e-04 9.9943084e-01]\n",
+      " [6.3883555e-01 3.1330839e-01]\n",
+      " [7.1552396e-03 9.9083912e-01]\n",
+      " [6.5931070e-01 2.8954297e-01]\n",
+      " [1.1493862e-03 9.9885178e-01]\n",
+      " [6.7281449e-01 2.7684718e-01]\n",
+      " [1.1012256e-03 9.9884617e-01]\n",
+      " [5.8968014e-01 3.7217873e-01]\n",
+      " [2.9896647e-02 9.7000223e-01]\n",
+      " [1.9930303e-03 9.9756467e-01]\n",
+      " [6.5924537e-01 2.8720123e-01]]\n",
+      "      y_Actual                  y_Predicted\n",
+      "0   (1.0, 0.0)       (0.6573858, 0.2919913)\n",
+      "1   (1.0, 0.0)     (0.65448993, 0.29064262)\n",
+      "2   (0.0, 1.0)     (0.021077842, 0.9793423)\n",
+      "3   (1.0, 0.0)       (0.6597644, 0.2831859)\n",
+      "4   (1.0, 0.0)     (0.66138643, 0.28758132)\n",
+      "5   (0.0, 1.0)     (0.017175227, 0.9825889)\n",
+      "6   (1.0, 0.0)      (0.6255685, 0.33210438)\n",
+      "7   (1.0, 0.0)      (0.57092774, 0.3967358)\n",
+      "8   (1.0, 0.0)       (0.6540682, 0.2933041)\n",
+      "9   (0.0, 1.0)  (0.00058606267, 0.99943084)\n",
+      "10  (1.0, 0.0)      (0.63883555, 0.3133084)\n",
+      "11  (0.0, 1.0)    (0.0071552396, 0.9908391)\n",
+      "12  (1.0, 0.0)      (0.6593107, 0.28954297)\n",
+      "13  (0.0, 1.0)    (0.0011493862, 0.9988518)\n",
+      "14  (1.0, 0.0)      (0.6728145, 0.27684718)\n",
+      "15  (0.0, 1.0)    (0.0011012256, 0.9988462)\n",
+      "16  (1.0, 0.0)     (0.58968014, 0.37217873)\n",
+      "17  (0.0, 1.0)    (0.029896647, 0.97000223)\n",
+      "18  (0.0, 1.0)    (0.0019930303, 0.9975647)\n",
+      "19  (1.0, 0.0)      (0.6592454, 0.28720123)\n"
      ]
     }
    ],
    "source": [
-    "from warnings import ignore\n",
-    "warnings.ignore()\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
