--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -55,13 +55,13 @@
     "valik = test_datagen.flow_from_directory(\n",
     "        r'D:\\reposetory\\Save_Transport\\dataset\\test',\n",
     "        target_size=(150, 150),\n",
-    "        batch_size=20\n",
+    "        batch_size=1\n",
     "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,25 +69,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "24/24 - 8s - loss: 0.4742 - accuracy: 0.7917 - val_loss: 0.4762 - val_accuracy: 0.6833\n",
+      "24/24 - 9s - loss: 0.4603 - accuracy: 0.8214 - val_loss: 0.4809 - val_accuracy: 0.6667\n",
       "Epoch 2/10\n",
-      "24/24 - 9s - loss: 0.2950 - accuracy: 0.8250 - val_loss: 0.3209 - val_accuracy: 0.9000\n",
+      "24/24 - 9s - loss: 0.2794 - accuracy: 0.8382 - val_loss: 0.3601 - val_accuracy: 0.6667\n",
       "Epoch 3/10\n",
-      "24/24 - 8s - loss: 0.2511 - accuracy: 0.8562 - val_loss: 1.0799 - val_accuracy: 0.5000\n",
+      "24/24 - 9s - loss: 0.2976 - accuracy: 0.8125 - val_loss: 0.1714 - val_accuracy: 1.0000\n",
       "Epoch 4/10\n",
-      "24/24 - 8s - loss: 0.2992 - accuracy: 0.8403 - val_loss: 0.3363 - val_accuracy: 0.8500\n",
+      "24/24 - 10s - loss: 0.2768 - accuracy: 0.8167 - val_loss: 0.2381 - val_accuracy: 1.0000\n",
       "Epoch 5/10\n",
-      "24/24 - 8s - loss: 0.2621 - accuracy: 0.8592 - val_loss: 0.3290 - val_accuracy: 0.9167\n",
+      "24/24 - 9s - loss: 0.2466 - accuracy: 0.8571 - val_loss: 0.0988 - val_accuracy: 1.0000\n",
       "Epoch 6/10\n",
-      "24/24 - 8s - loss: 0.2153 - accuracy: 0.8571 - val_loss: 0.3923 - val_accuracy: 0.7500\n",
+      "24/24 - 9s - loss: 0.2611 - accuracy: 0.8354 - val_loss: 0.4707 - val_accuracy: 0.6667\n",
       "Epoch 7/10\n",
-      "24/24 - 9s - loss: 0.2542 - accuracy: 0.8354 - val_loss: 0.2572 - val_accuracy: 1.0000\n",
-      "Epoch 8/10\n",
-      "24/24 - 8s - loss: 0.2659 - accuracy: 0.8313 - val_loss: 0.3284 - val_accuracy: 0.8500\n",
-      "Epoch 9/10\n",
-      "24/24 - 9s - loss: 0.2572 - accuracy: 0.8256 - val_loss: 0.4488 - val_accuracy: 0.5000\n",
-      "Epoch 10/10\n",
-      "24/24 - 8s - loss: 0.2163 - accuracy: 0.8750 - val_loss: 0.2144 - val_accuracy: 1.0000\n"
+      "24/24 - 8s - loss: 0.2729 - accuracy: 0.8298 - val_loss: 0.2412 - val_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -143,66 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 13 calls to <function Model.make_test_function.<locals>.test_function at 0x000001770C40A8B0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "3/3 [==============================] - 0s 62ms/step - loss: 0.2144 - accuracy: 1.0000\n",
+      "60/60 [==============================] - 1s 10ms/step - loss: 0.5935 - accuracy: 0.5000\n",
       "\n",
-      " loss, accuracy = [0.21437667310237885, 1.0] \n",
-      "\n",
-      "WARNING:tensorflow:8 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001770D90E700> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "[[6.5738583e-01 2.9199129e-01]\n",
-      " [6.5448993e-01 2.9064262e-01]\n",
-      " [2.1077842e-02 9.7934228e-01]\n",
-      " [6.5976441e-01 2.8318590e-01]\n",
-      " [6.6138643e-01 2.8758132e-01]\n",
-      " [1.7175227e-02 9.8258889e-01]\n",
-      " [6.2556851e-01 3.3210438e-01]\n",
-      " [5.7092774e-01 3.9673579e-01]\n",
-      " [6.5406817e-01 2.9330409e-01]\n",
-      " [5.8606267e-04 9.9943084e-01]\n",
-      " [6.3883555e-01 3.1330839e-01]\n",
-      " [7.1552396e-03 9.9083912e-01]\n",
-      " [6.5931070e-01 2.8954297e-01]\n",
-      " [1.1493862e-03 9.9885178e-01]\n",
-      " [6.7281449e-01 2.7684718e-01]\n",
-      " [1.1012256e-03 9.9884617e-01]\n",
-      " [5.8968014e-01 3.7217873e-01]\n",
-      " [2.9896647e-02 9.7000223e-01]\n",
-      " [1.9930303e-03 9.9756467e-01]\n",
-      " [6.5924537e-01 2.8720123e-01]]\n",
-      "      y_Actual                  y_Predicted\n",
-      "0   (1.0, 0.0)       (0.6573858, 0.2919913)\n",
-      "1   (1.0, 0.0)     (0.65448993, 0.29064262)\n",
-      "2   (0.0, 1.0)     (0.021077842, 0.9793423)\n",
-      "3   (1.0, 0.0)       (0.6597644, 0.2831859)\n",
-      "4   (1.0, 0.0)     (0.66138643, 0.28758132)\n",
-      "5   (0.0, 1.0)     (0.017175227, 0.9825889)\n",
-      "6   (1.0, 0.0)      (0.6255685, 0.33210438)\n",
-      "7   (1.0, 0.0)      (0.57092774, 0.3967358)\n",
-      "8   (1.0, 0.0)       (0.6540682, 0.2933041)\n",
-      "9   (0.0, 1.0)  (0.00058606267, 0.99943084)\n",
-      "10  (1.0, 0.0)      (0.63883555, 0.3133084)\n",
-      "11  (0.0, 1.0)    (0.0071552396, 0.9908391)\n",
-      "12  (1.0, 0.0)      (0.6593107, 0.28954297)\n",
-      "13  (0.0, 1.0)    (0.0011493862, 0.9988518)\n",
-      "14  (1.0, 0.0)      (0.6728145, 0.27684718)\n",
-      "15  (0.0, 1.0)    (0.0011012256, 0.9988462)\n",
-      "16  (1.0, 0.0)     (0.58968014, 0.37217873)\n",
-      "17  (0.0, 1.0)    (0.029896647, 0.97000223)\n",
-      "18  (0.0, 1.0)    (0.0019930303, 0.9975647)\n",
-      "19  (1.0, 0.0)      (0.6592454, 0.28720123)\n"
+      " loss, accuracy = [0.5934595465660095, 0.5] \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -219,20 +168,31 @@
     "print('\\n loss, accuracy =', results, '\\n')\n",
     "\n",
     "\n",
-    "final_res = model.predict(valik[1][0])\n",
-    "\n",
-    "\n",
-    "print(final_res)\n",
-    "\n",
+    "filenames = valik.filenames\n",
+    "count_samples = len(filenames)\n",
+    "predict = model.predict_generator(valik,steps = count_samples)\n",
     "\n",
     "\n",
     "\n",
-    "data = {'y_Actual':    [ tuple(i) for i in valik[1][1]],\n",
-    "        'y_Predicted': [ tuple(i) for i in final_res]\n",
-    "        }\n",
+    "#final_res = model.predict(valik[1][0])\n",
+    "#print(final_res)\n",
     "\n",
-    "df = pd.DataFrame(data, columns=['y_Actual','y_Predicted'])\n",
-    "print (df)\n"
+    "#data = {'y_Actual':    [ tuple(i) for i in valik[1][1]],\n",
+    "#        'y_Predicted': [ tuple(i) for i in final_res]\n",
+    "#        }\n",
+    "\n",
+    "#df = pd.DataFrame(data, columns=['y_Actual','y_Predicted'])\n",
+    "#print (df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict\n",
+    "        "
    ]
   },
   {
