--- a/RealTime/RealTime.ipynb
+++ b/RealTime/RealTime.ipynb
@@ -39,7 +39,7 @@
     "    S = librosa.feature.melspectrogram(y=clip, sr=sample_rate)\n",
     "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
     "    \n",
-    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/jpg/Untitled/' + name + '.jpg'\n",
+    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/jpg/h/' + name + '.jpg'\n",
     "    plt.savefig(filename, dpi=400, bbox_inches='tight',pad_inches=0)\n",
     "    plt.close()    \n",
     "    fig.clf()\n",
