--- a/RealTime/RealTime.ipynb
+++ b/RealTime/RealTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "\n",
     "\n",
-    "model = keras.models.load_model('/home/aigaf/Desktop/GitHub/Save_Transport/main_classifier/save_1.h5')"
+    "model = keras.models.load_model('/home/aigaf/Desktop/Repositories/Save_Transport/main_classifier/save_1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    S = librosa.feature.melspectrogram(y=clip, sr=sample_rate)\n",
     "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
     "    \n",
-    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/jpg/h/' + name + '.jpg'\n",
+    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/jpg/Untitled/' + name + '.jpg'\n",
     "    plt.savefig(filename, dpi=400, bbox_inches='tight',pad_inches=0)\n",
     "    plt.close()    \n",
     "    fig.clf()\n",
@@ -50,7 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Сount(predict, cut_count):\n",
+    "    for i in range(len(predict)):\n",
+    "        if (predict[i][0]) < 0.50:\n",
+    "            cut_count +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -74,42 +86,56 @@
     "    myrecording = sd.rec(int(seconds * fs), samplerate=fs, channels=2)\n",
     "    sd.wait()  # Wait until recording is finished\n",
     "    \n",
-    "    path = '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/wav/'\n",
+    "    path = '/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/wav/'\n",
     "    name = 'output' + str(i)\n",
     "    \n",
     "    write(path + name + '.wav', fs, myrecording) # конверт в wav и сохранение\n",
     "    create_spectrogram(path + name + '.wav',name)\n",
     "    \n",
     "liveMode = ImageDataGenerator(rescale=1./255)\n",
-    "live_generator = liveMode.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/jpg',\n",
+    "live_generator = liveMode.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/jpg',\n",
     "                                               target_size=(150, 150),batch_size=1)\n",
     "filenames = live_generator.filenames\n",
     "nb_samples = len(filenames)\n",
-    "predict = model.predict_generator(live_generator,steps = nb_samples)"
+    "predict = model.predict_generator(live_generator, steps = nb_samples)\n",
+    "\n",
+    "count +=5\n",
+    "Сount(predict, cut_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "y_test = [0, 1, 1, 1, 1]\n",
+    "y_pred = np.where(predict>0.5,1,0)\n",
+    "rounded_labels=np.argmax(y_pred, axis=1)\n",
+    "cm = confusion_matrix(y_test,rounded_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00558835, 0.99461466],\n",
-       "       [0.00670061, 0.9935098 ],\n",
-       "       [0.00553337, 0.9945488 ],\n",
-       "       [0.0051966 , 0.9948623 ],\n",
-       "       [0.01081932, 0.98974466]], dtype=float32)"
+       "array([[0, 1],\n",
+       "       [0, 4]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict"
+    "cm"
    ]
   },
   {
