Confusion Matrix is ready for test samplpes

--- a/RealTime/RealTime.ipynb
+++ b/RealTime/RealTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
     "from path import Path\n",
     "import numpy as np\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "\n",
-    "model = keras.models.load_model('/home/aigaf/Desktop/Repositories/Save_Transport/main_classifier/save_1.h5')"
+    "model = keras.models.load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Сount(predict, cut_count):\n",
+    "def Сount(predict, cut_count = 0):\n",
     "    for i in range(len(predict)):\n",
     "        if (predict[i][0]) < 0.50:\n",
     "            cut_count +=1"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,12 @@
     "nb_samples = len(filenames)\n",
     "predict = model.predict_generator(live_generator, steps = nb_samples)\n",
     "\n",
-    "count +=5\n",
-    "Сount(predict, cut_count)"
+    "Сount(predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +128,7 @@
        "       [0, 4]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
