--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -208,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')"
+    "model = load_model(r'D:/save_1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +226,11 @@
      "text": [
       "Found 60 images belonging to 2 classes.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aigaf/anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py:1905: UserWarning: `Model.predict_generator` is deprecated and will be removed in a future version. Please use `Model.predict`, which supports generators.\n",
-      "  warnings.warn('`Model.predict_generator` is deprecated and '\n"
-     ]
     }
    ],
    "source": [
     "generator = ImageDataGenerator(rescale=1./255)\n",
-    "predict_generator = generator.flow_from_directory('/home/aigaf/Desktop/Repositories/Save_Transport/dataset/test',\n",
+    "predict_generator = generator.flow_from_directory(r'D:\\reposetory\\Save_Transport\\dataset\\test',\n",
     "                                               target_size=(150, 150),batch_size=1, shuffle = False, class_mode=None)\n",
     "filenames = predict_generator.filenames\n",
     "nb_samples = len(filenames)\n",
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,18 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,17 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[30,  0],\n",
-       "       [ 0, 30]])"
+       "array([[15, 15],\n",
+       "       [15, 15]], dtype=int64)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,6 +292,13 @@
    "source": [
     "confusion_matrix(rounded_labels, y_true)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -318,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
