Matrix confusion added

--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import random\n",
+    "random.seed(228)\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -226,79 +238,110 @@
      "text": [
       "Found 60 images belonging to 2 classes.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aigaf/anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py:1905: UserWarning: `Model.predict_generator` is deprecated and will be removed in a future version. Please use `Model.predict`, which supports generators.\n",
-      "  warnings.warn('`Model.predict_generator` is deprecated and '\n"
-     ]
     }
    ],
    "source": [
     "generator = ImageDataGenerator(rescale=1./255)\n",
-    "predict_generator = generator.flow_from_directory('/home/aigaf/Desktop/Repositories/Save_Transport/dataset/test',\n",
-    "                                               target_size=(150, 150),batch_size=1, shuffle = False, class_mode=None)\n",
-    "filenames = predict_generator.filenames\n",
-    "nb_samples = len(filenames)\n",
-    "probabilities = model.predict_generator(predict_generator, steps = nb_samples)"
+    "predict_generator = generator.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/dataset/test',\n",
+    "                                               target_size=(150, 150),  shuffle = True, batch_size = 30)\n",
+    "\n",
+    "y_test_1 = model.predict(predict_generator[0][0])\n",
+    "y_test_2 = model.predict(predict_generator[1][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
+    "y_test = []\n",
+    "y_test.extend(y_test_1)\n",
+    "y_test.extend(y_test_2)\n",
     "\n",
-    "y_true = np.array([0] * 30 + [1] * 30)\n",
-    "y_pred = np.where(probabilities>0.5,1,0)\n",
-    "rounded_labels=np.argmax(y_pred, axis=1)"
+    "y_test =np.argmax(y_test, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true_1 = predict_generator[0][1]\n",
+    "y_true_2 = predict_generator[1][1]\n",
+    "\n",
+    "y_true = []\n",
+    "y_true.extend(y_true_1) \n",
+    "y_true.extend(y_test_2)\n",
+    "\n",
+    "y_true = np.argmax(y_true, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'y_Actual':    [ y_true],\n",
+    "        'y_Predicted': [ y_test]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "{'y_Actual': [array([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "         0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+       "         1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1])],\n",
+       " 'y_Predicted': [array([1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "         0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+       "         1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1])]}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rounded_labels"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[30,  0],\n",
+       "array([[29,  1],\n",
        "       [ 0, 30]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confusion_matrix(rounded_labels, y_true)"
+    "confusion_matrix(y_true, y_test)"
    ]
   }
  ],
