--- a/RealTime/RealTime.ipynb
+++ b/RealTime/RealTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
     "from path import Path\n",
     "import numpy as np\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
-    "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "model = keras.models.load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')"
+    "\n",
+    "model = keras.models.load_model('/home/aigaf/Desktop/GitHub/Save_Transport/save_1.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    S = librosa.feature.melspectrogram(y=clip, sr=sample_rate)\n",
     "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
     "    \n",
-    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/jpg/Untitled/' + name + '.jpg'\n",
+    "    filename  = '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/jpg/h/' + name + '.jpg'\n",
     "    plt.savefig(filename, dpi=400, bbox_inches='tight',pad_inches=0)\n",
     "    plt.close()    \n",
     "    fig.clf()\n",
@@ -50,26 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Сount(predict, cut_count = 0):\n",
-    "    for i in range(len(predict)):\n",
-    "        if (predict[i][0]) < 0.50:\n",
-    "            cut_count +=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 5 images belonging to 1 classes.\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/wav/output0.wav'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-336-77af3f91ed0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'output'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.wav'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmyrecording\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# конверт в wav и сохранение\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mcreate_spectrogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.wav'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/scipy/io/wavfile.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(filename, rate, data)\u001b[0m\n\u001b[1;32m    380\u001b[0m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    381\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 382\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    383\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m     \u001b[0mfs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/wav/output0.wav'"
      ]
     }
    ],
@@ -86,55 +79,41 @@
     "    myrecording = sd.rec(int(seconds * fs), samplerate=fs, channels=2)\n",
     "    sd.wait()  # Wait until recording is finished\n",
     "    \n",
-    "    path = '/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/wav/'\n",
+    "    path = '/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/wav/'\n",
     "    name = 'output' + str(i)\n",
     "    \n",
     "    write(path + name + '.wav', fs, myrecording) # конверт в wav и сохранение\n",
     "    create_spectrogram(path + name + '.wav',name)\n",
     "    \n",
     "liveMode = ImageDataGenerator(rescale=1./255)\n",
-    "live_generator = liveMode.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/RealTime/jpg',\n",
-    "                                               target_size=(150, 150),batch_size=1)\n",
-    "filenames = live_generator.filenames\n",
-    "nb_samples = len(filenames)\n",
-    "predict = model.predict_generator(live_generator, steps = nb_samples)\n",
+    "live_generator = liveMode.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/Untitled Folder/jpg',\n",
+    "                                               target_size=(150, 150),batch_size=30)\n",
     "\n",
-    "Сount(predict)"
+    "predict = model.predict_generator(live_generator[0][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test = [0, 1, 1, 1, 1]\n",
-    "y_pred = np.where(predict>0.5,1,0)\n",
-    "rounded_labels=np.argmax(y_pred, axis=1)\n",
-    "cm = confusion_matrix(y_test,rounded_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1],\n",
-       "       [0, 4]])"
+       "array([[0.00558835, 0.99461466],\n",
+       "       [0.00670061, 0.9935098 ],\n",
+       "       [0.00553337, 0.9945488 ],\n",
+       "       [0.0051966 , 0.9948623 ],\n",
+       "       [0.01081932, 0.98974466]], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cm"
+    "predict"
    ]
   },
   {
